12/3/12 i18n of title in options panel
12/3/12 encapsulate wiring of DOM ui-components to javascript in WidgetConnector
12/3/12 remove unnecessary div's from options panel template
12/3/12 use a single jquery selector when wiring up check boxes
12/3/12 wire up check boxes using jquery selectors
12/3/12 size the Options panel after modifying the DOM
12/3/12 use jquery to bind buttons to handlers
12/3/12 add template for Options panel
12/3/12 add template for Options button
12/3/12 delete unnecessary div in faraday.html
12/2/12 change id and tag for Options panel label
12/2/12 revert css for .ui-btn and .ui-slider-handle
12/2/12 add tpl to faraday-config
12/2/12 rename OptionsPanel.connect to init
12/2/12 remove div around Options button in html
12/2/12 add .optionsButton to css, style specific buttons in the Options panel, remove slider css workaround
12/2/12 use contrib css for jquery.mobile
12/2/12 use jquery to reset sliders
12/2/12 change contrib names to include "-phet" fork suffix
12/2/12 rename ControlPanel -> OptionsPanel
12/2/12 add string and code for "Options" i18n
12/2/12 put keys in html file, so I can see what's not getting translated
12/2/12 fix i18n of check boxes, account for jquery.mobile dom changes
12/2/12 remove redundant load of jquery and jquery.mobile from faraday-config.js
12/2/12 yet another ordering of css and js in hmtl file
12/2/12 load app CSS after loading jquery.mobile
11/30/12 set absolute position of Options button to upper-right using css
11/30/12 make options panel less transparent
11/30/12 first attempt at overlapping "Options" button on canvas
11/30/12 rename faraday.css
11/30/12 remove easel shim from faraday-config, removed $ import in ControlPanel
11/30/12 got contrib jquery.mobile to load by moving stuff around in html file, but not sure why...
11/30/12 add some requirejs stuff for jquery and jquery.mobile that i'm not really sure about